--- a/app/src/main/res/values-hi-rIN/strings.xml
+++ b/app/src/main/res/values-hi-rIN/strings.xml
@@ -3,5 +3,5 @@
     <string name="app_name">पासा</string>
     <string name="button_text">पासा फेंको</string>
     <string name="roll_button_description">पासा रोल करता है</string>
-    <string name="Image_logo_desciption">"पासा लोगो "</string>
+    <string name="Image_logo_description">"पासा लोगो "</string>
 </resources>
